Fix tests.